<resources>
    <string name="app_name">RecyclerViewApp</string>
    <string name="id">Id</string>
    <string name="name">Name</string>
    <string name="roll_no">Roll Number</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_id">Enter Id</string>
    <string name="enter_roll_number">Enter Roll Number</string>
    <string name="add_item">Add Item</string>
</resources>