<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etName"
        android:layout_margin="10dp"
        android:background="@color/seaGreen"
        android:textColor="@color/white"
        android:hint="@string/enter_name"
        android:textSize="18sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etId"
        android:textColor="@color/white"
        android:background="@color/seaGreen"
        android:hint="@string/enter_id"
        android:layout_margin="10dp"
        android:textSize="18sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@color/seaGreen"
        android:id="@+id/etrollNo"
        android:hint="@string/enter_roll_number"
        android:layout_margin="10dp"
        android:textSize="18sp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAdd"
        android:layout_gravity="center"
        android:text="@string/add_item"/>


</LinearLayout>
</layout>